// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Level renders correctly 1`] = `
<div
  className="level is-mobile"
>
  <div
    className="level-left"
  >
    <div
      className="level-item"
    >
      <p
        className="title is-4"
      >
        Recent News
      </p>
    </div>
  </div>
  <div
    className="level-right"
  >
    <div
      className="level-item"
    >
      <a
        className="button is-primary is-outlined"
        href="/news"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        View All News
      </a>
    </div>
  </div>
</div>
`;

exports[`News Section renders correctly 1`] = `
<section
  className="section background is-hexellence"
  style={
    Object {
      "paddingBottom": "5rem",
    }
  }
>
  <div
    className="container"
  >
    <div
      className="level is-mobile"
    >
      <div
        className="level-left"
      >
        <div
          className="level-item"
        >
          <p
            className="title is-4"
          >
            Recent News
          </p>
        </div>
      </div>
      <div
        className="level-right"
      >
        <div
          className="level-item"
        >
          <a
            className="button is-primary is-outlined"
            href="/news"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            View All News
          </a>
        </div>
      </div>
    </div>
  </div>
</section>
`;
